# space-invaders-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpu/: cpu.c  cpu.h  opcodes.c  opcodes.h
docs/: notes.txt
include/: cpu.h  opcodes.h
roms/space-invaders/: README.txt
roms/test-rom/: README.txt
sound/: README.txt
space-invaders/: hardware.c  hardware.h  invaders.c
src/: cpu.c  main.c  opcodes.c
tests/: cpu_test.c  cpu_test_bak.c
